PROJECT(ustk_core_tests)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(VISP REQUIRED)
IF(VISP_FOUND)
	include_directories(${VISP_INCLUDE_DIRS})
	include_directories(${USTK_INCLUDE_DIR})	
ENDIF(VISP_FOUND)

ADD_EXECUTABLE(usPrescan2D usPrescan2D.cpp)
ADD_EXECUTABLE(usPostscan2D usPostscan2D.cpp)
ADD_EXECUTABLE(usRF2D usRF2D.cpp)
ADD_EXECUTABLE(usPrescan3D usPrescan3D.cpp)
ADD_EXECUTABLE(usPostscan3D usPostscan3D.cpp)
ADD_EXECUTABLE(usRF3D usRF3D.cpp)
target_link_libraries(usPrescan2D visp_core visp_io visp_ustk_core)
target_link_libraries(usPostscan2D visp_core visp_io visp_ustk_core)
target_link_libraries(usRF2D visp_core visp_io visp_ustk_core)
target_link_libraries(usPrescan3D visp_core visp_io visp_ustk_core)
target_link_libraries(usPostscan3D visp_core visp_io visp_ustk_core)
target_link_libraries(usRF3D visp_core visp_io visp_ustk_core)